fixed disk container overlapping with logo

--- a/src/Website/styles/styles.css
+++ b/src/Website/styles/styles.css
@@ -49,7 +49,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 100%;
+    margin-top: 50px;
 }
 
 .gpu-info {
